fix: remove tap on mobile controls v2

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -55,9 +55,3 @@ button {
   border: none;
   background: none;
 }
-
-button,
-label,
-input {
-  -webkit-tap-highlight-color: transparent;
-}
