--- a/styles/layout/_app.scss
+++ b/styles/layout/_app.scss
@@ -5,11 +5,18 @@
   padding: $padding-base;
   width: 100%;
   max-width: 320px;
-  box-sizing: border-box;      
+  box-sizing: border-box;  
 }
 
 .hidden {
   display: none !important;
+}
+
+
+button,
+label,
+input {
+  -webkit-tap-highlight-color: transparent;
 }
 
 @media  (orientation: portrait) {
